@@ -1,6 +1,8 @@
 ikiwiki (3.20120204) UNRELEASED; urgency=low
 
   * Remove dead link from plugins/teximg. Closes: #664885
+  * inline: When the pagenames list includes pages that do not exist, skip
+    them.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 21 Mar 2012 14:33:14 -0400
 
